# DnmEngine1

./: .gitignore  CMakeLists.txt  CMakePresets.json  Log.html  Main.cpp  README.md  imgui.ini  renderDocSettings.cap  vcpkg.json
Assets/: PositionGizmo.glb  dnm.glb
Engine/: CMakeLists.txt  Engine.cpp  Engine.hpp  ResourceManager.cpp  ResourceManager.hpp
Engine/Entity/: Component.hpp  Entity.hpp  Scene.cpp  Scene.hpp  Transform.hpp
Engine/Graphics/: Camera.cpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  Descriptor.cpp  Descriptor.hpp  GraphicsThread.hpp  Image.cpp  Image.hpp  Light.cpp  Light.hpp  Material.hpp  Mesh.hpp  Pipeline.cpp  Pipeline.hpp  PipelineLayout.cpp  PipelineLayout.hpp  RawBuffer.cpp  RawBuffer.hpp  RenderPass.cpp  RenderPass.hpp  Renderer.cpp  Renderer.hpp  Sampler.cpp  Sampler.hpp  Shader.cpp  Shader.hpp  ShaderCache.hpp  StorageBuffer.hpp  Swapchain.cpp  Swapchain.hpp  Texture.hpp  VkContext.cpp  VkContext.hpp
Engine/Utility/: Counter.hpp  EngineDefines.hpp  Flag.hpp  LoadShared.cpp  LoadShared.hpp  Log.cpp  Log.hpp  PtrFactory.hpp  Thread.hpp  Types.hpp  UnorderedArray.hpp
Engine/Window/: Window.cpp  Window.hpp
Scenes/: dnm.json
Scripts/: CMakeLists.txt  CameraManager.cpp
Shaders/: Brdf.frag  Brdf.vert  CubeMap.vert  EnvMap.frag  EnvMap.vert  EquirectangularToCubeMap.frag  GeometryPass.frag  GeometryPass.vert  Irradiance.frag  LightingPass.frag  LightingPass.vert  PreFilter.frag  ShadowBlur.comp  ShadowPass.frag  ShadowPass.vert  compile.bat
